--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="create_new_account"> <i>New Here? </i><b><u>Create a new Acount!</u></b></string>
-    <string name="login_now"> <i>Already Signed Up?</i> <b><u>Log In</u></b></string>
+    <string name="create_new_account">New Here? <b><u>Sign Up!</u></b></string>
+    <string name="login_now">Already signed up? <b><u>Log In</u></b></string>
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
@@ -28,5 +28,5 @@
     <string name="get_now">Get Now!!</string>
     <string name="add_to_cart">Add to Cart</string>
     <string name="success_message">Thanks for Placing the Order. Order Placed Successfully. Keep Shopping!!!</string>
-    <string name="watchStore">Watch Store</string>
+<!--    <string name="watchStore">Home</string>-->
 </resources>
