--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="create_new_account">New Here? <b><u>Sign Up!</u></b></string>
-    <string name="login_now">Already signed up? <b><u>Log In</u></b></string>
+    <string name="create_new_account">New Here? <u>Sign Up</u></string>
+    <string name="login_now">Already signed up? <u>Log In</u></string>
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
