--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,9 @@
     <string name="mobile_no">Mobile No</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="checkout_exclusive_watches_from_top_brand">Checkout Exclusive Watches from Top Brand</string>
+    <string name="slogan">We Care. We Serve. We Deliver.</string>
     <string name="get_now">Get Now!!</string>
     <string name="add_to_cart">Add to Cart</string>
     <string name="success_message">Thanks for Placing the Order. Order Placed Successfully. Keep Shopping!!!</string>
-<!--    <string name="watchStore">Home</string>-->
+    <string name="watchStore">Home</string>
 </resources>
